--- a/index.html
+++ b/index.html
@@ -4,17 +4,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
     <link rel="stylesheet" href="./style.scss">
-    
+
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.rtl.min.css">
 
     <script src="./index.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
 </head>
+<style>
+
+</style>
 
 <body dir="rtl">
+    <div class="main">
+        <div class="row justify-content-center" id="search-box">
+            <div class="col-7"></div>
+        </div>
+        <div class="row justify-content-around align-items-center" id="content">
+            <div class="col-3"></div>
+            <div class="col-5"></div>
+            <div class="col-3" id="right-panel">
+
+                
+            </div>
+        </div>
+    </div>
 
 </body>
 
