Fix : right and left

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
             <div class="col-7"></div>
         </div>
         <div class="row justify-content-around align-items-center" id="content">
-            <div class="col-3"></div>
+            <div class="col-3" id="right-panel"></div>
             <div class="col-5"></div>
-            <div class="col-3" id="right-panel">
+            <div class="col-3" id="left-panel">
 
-                
+               
             </div>
         </div>
     </div>
