--- a/index.html
+++ b/index.html
@@ -1,37 +1,31 @@
 <!DOCTYPE html>
 <html lang="fa">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-    <link rel="stylesheet" href="./style.scss">
+    <link rel="stylesheet" href="./style.scss" />
 
-    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.rtl.min.css">
+    <link
+      rel="stylesheet"
+      href="./node_modules/bootstrap/dist/css/bootstrap.rtl.min.css"
+    />
 
     <script src="./index.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  </head>
+  <style></style>
 
-</head>
-<style>
-
-</style>
-
-<body dir="rtl">
+  <body dir="rtl">
     <div class="main">
-        <div class="row justify-content-center" id="search-box">
-            <div class="col-7"></div>
-        </div>
-        <div class="row justify-content-around align-items-center" id="content">
-            <div class="col-3" id="right-panel"></div>
-            <div class="col-5"></div>
-            <div class="col-3" id="left-panel">
-
-               
-            </div>
-        </div>
+      <div class="row justify-content-center" id="search-box">
+        <div class="col-7"></div>
+      </div>
+      <div class="row justify-content-around align-items-center" id="content">
+        <div class="col-3" id="right-panel"></div>
+        <div class="col-5"></div>
+        <div class="col-3" id="left-panel"></div>
+      </div>
     </div>
-
-</body>
-
+  </body>
 </html>
