feat: add some date and time for left panel

--- a/index.html
+++ b/index.html
@@ -24,7 +24,29 @@
       <div class="row justify-content-around align-items-center" id="content">
         <div class="col-3" id="right-panel"></div>
         <div class="col-5"></div>
-        <div class="col-3" id="left-panel"></div>
+        <div class="col-3" id="left-panel">
+          <div id="dataAndTime">
+            <div id="times">
+              <h1>time</h1>
+              <h3>time</h3>
+            </div>
+            <div id="dates">
+              <span>date</span>
+              <span>date</span>
+            </div>
+            <hr />
+          </div>
+          <div id="timer">
+            <div id="title">
+              <h1>زمانسنج</h1>
+            </div>
+            <div id="start">
+              <h3>00:00:00</h3>
+              <button>شروع</button>
+            </div>
+            <hr />
+          </div>
+        </div>
       </div>
     </div>
   </body>
