feat: add center and  fix right panel

--- a/index.html
+++ b/index.html
@@ -30,9 +30,59 @@
           <div class="unit col-1">°</div>
           <div class="value col-1">22</div>
         </div>
+        <div class="day-temp row justify-content-center align-items-center">
+          <div class="min row justify-content-center align-items-center">
+            <div class="unit col-1">°</div>
+            <div class="value col-1">22</div>
+          </div>
+          <p>
+            /
+          </p>
+          <div class="max justify-content-center align-items-center">
+            <div class="unit col-1">°</div>
+            <div class="value col-1">22</div>
+          </div>
+        </div>
 
       </div>
-      <div class="col-5"></div>
+      <div class="col-5" id="center-panel">
+        <div class="row justify-content-evenly align-items-center">
+          <div class="col-2">
+            <img src="" class="icon" alt="">
+            <p class="description">تنظیمات</p>
+          </div>
+          <div class="col-2">
+            <img src="" class="icon" alt="">
+            <p class="description">asdas</p>
+          </div>
+          <div class="col-2">
+            <img src="" class="icon" alt="">
+            <p class="description">asdas</p>
+          </div>
+          <div class="col-2">
+            <img src="" class="icon" alt="">
+            <p class="description">asdas</p>
+          </div>
+        </div>
+        <div class="row justify-content-evenly align-items-center">
+          <div class="col-2">
+            <img src="" class="icon" alt="">
+            <p class="description">تنظیمات</p>
+          </div>
+          <div class="col-2">
+            <img src="" class="icon" alt="">
+            <p class="description">asdas</p>
+          </div>
+          <div class="col-2">
+            <img src="" class="icon" alt="">
+            <p class="description">asdas</p>
+          </div>
+          <div class="col-2">
+            <img src="" class="icon" alt="">
+            <p class="description">asdas</p>
+          </div>
+        </div>
+      </div>
       <div class="col-3" id="left-panel">
         <div id="dataAndTime">
           <div id="times">
